update version, create metodh to update, fix implementation